fixed overflow scroll

--- a/src/shared/routes/Location/index.css
+++ b/src/shared/routes/Location/index.css
@@ -15,7 +15,9 @@
 .book-dj-location .breadcrumbs {
     display: block;
 }
-
+.book-dj-location .menu-wrapper {
+    position: relative;
+}
 .book-dj-location .menu-wrapper > .container {
     background: rgba(255, 255, 255, 0.96);
     height: 80px;
@@ -26,7 +28,7 @@
     z-index: 4;
 }
 
-.book-dj-location .menu-wrapper > .container:after,
+/* .book-dj-location .menu-wrapper > .container:after,
 .book-dj-location .menu-wrapper > .container:before {
     background: rgba(255, 255, 255, 0.96);
     content: '';
@@ -40,6 +42,18 @@
 }
 .book-dj-location .menu-wrapper > .container:before {
     left: -90%;
+} */
+
+.book-dj-location .menu-wrapper:after {
+    background: rgba(255, 255, 255, 0.96);
+    content: '';
+    display: block;
+    height: 80px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
 }
 
 .span-wrapper {
